nivasa-macros/tests/trybuild/on_event_interceptor_requires_arg.stderr
error: `#[interceptor]` requires at least one interceptor type
 --> tests/trybuild/on_event_interceptor_requires_arg.rs:6:5
  |
6 |     #[interceptor()]
  |     ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `interceptor` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `on_event`
 --> tests/trybuild/on_event_interceptor_requires_arg.rs:1:34
  |
1 | use nivasa_macros::{interceptor, on_event};
  |                                  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
